🐛 Fixed `register.css` z-index

--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,6 +1,6 @@
 .register-page {
     left: 50%;
-    z-index: 2;
+    z-index: 1;
     width: 500px;
     height: 100%;
     display: flex;
@@ -25,7 +25,8 @@
     justify-content: center;
 }
 
-.register-button-div button {
+.register-button-div button,
+.error-close-button {
     border: 0;
     outline: 0;
     width: 100px;
@@ -37,7 +38,8 @@
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.register-button-div button:hover {
+.register-button-div button:hover,
+.error-close-button:hover {
     transform: scale(1.1);
 }
 
@@ -51,4 +53,36 @@
 .have-account a {
     color: rgb(130, 130, 130);
     font-family: 'Noto Sans', sans-serif;
+}
+
+.error-blackbg {
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 98;
+	height: 100%;
+    display: none;
+	position: absolute;
+	background: rgba(0, 0, 0, 0.8);
+}
+
+.error-box {
+	top: 50%;
+	left: 50%;
+	z-index: 99;
+	width: 500px;
+	height: 150px;
+	display: flex;
+	position: absolute;
+	align-items: center;
+	border-radius: 10px;
+	flex-direction: column;
+	justify-content: center;
+	transform: translate(-50%, -50%);
+	background-color: var(--secondary-color);
+	font-family: 'Roboto Condensed', sans-serif;
+}
+
+.error-close-button {
+	margin-top: 20px;
 }
